--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
@@ -41,6 +41,35 @@
         <div class="row">
           <div class="col m12">
             <div class="row photoswipe-gallery isotope mt-0" data-pswp-uid="1">
+
+                <div class="col m3">
+                  <div class="card small">
+                    <div class="card-image" style="height: auto;">
+                      <a class="col s12 m12 l12 item" href="{{ asset('bundles/dashboard/properties/4.jpg') }}" data-size="2880x1800"
+                         data-med="{{ asset('bundles/dashboard/properties/4.jpg') }}"
+                         data-med-size="1440x900" style="padding-right: 0px;padding-bottom: 0px;">
+                        <img src="{{ asset('bundles/dashboard/properties/4.jpg') }}" alt="">
+                      </a>
+                    </div>
+                    <div class="content" style="padding: 0px;">
+                    </div>
+                    <div class="progress" style="height: 3px;margin-top: 0px;margin-bottom: 0px;">
+                      <div class="indeterminate"></div>
+                    </div>
+                    <div class="card-action" style="">
+                      <a href="#!" class="blue-text" style="">ELIMINAR</a>
+                    </div>
+                  </div>
+                </div>
+
+
+
+              {#<a class="col s12 m6 l3 item" href="{{ asset('bundles/dashboard/properties/4.jpg') }}" data-size="2880x1800"#}
+                     {#data-med="{{ asset('bundles/dashboard/properties/4.jpg') }}"#}
+                     {#data-med-size="1440x900">#}
+                {#<img src="{{ asset('bundles/dashboard/properties/4.jpg') }}" alt="">#}
+              {#</a>#}
+
               {% if property.getTempPhotos() %}
                 {% for photo in property.getTempPhotos().toArray() %}
                   <a class="col s12 m6 l3 item" href="{{ photo }}" data-size="2880x1800"
