--- a/src/UserBundle/Resources/views/Profile/index.html.twig
+++ b/src/UserBundle/Resources/views/Profile/index.html.twig
@@ -162,15 +162,19 @@
 			<div class="col m3" style="padding-right: 20px;">
 				<div class="card small" style="background-color: #F8F8F8;color: #5E5E5E;">
 
-					<a href="" class="pmop-edit">
-						<i class="mdi mdi-image-photo-camera"></i> <span class="hidden-xs">Update Profile Picture</span>
-					</a>
+					{#<a href="" class="pmop-edit">#}
+						{#<i class="mdi mdi-image-photo-camera"></i> <span class="hidden-xs">Update Profile Picture</span>#}
+					{#</a>#}
+
 					<div class="card-image card-image-profile">
 						<img src="{{ asset('bundles/dashboard/people/01.jpg') }}">
 					</div>
-					<div class="file-field input-field">
-						<div class="btn">
-							<span>File</span>
+					<div class="progress" style="height: 3px;margin-top: 0px;margin-bottom: 0px;">
+						<div class="indeterminate"></div>
+					</div>
+					<div class="file-field input-field pmop-edit" style=" margin-top: 0px !important;padding: 0px;">
+						<div class="btn" style="background-color: transparent;">
+							<span><i class="mdi mdi-image-photo-camera left"></i> Update Picture</span>
 							<input name="file" class="cloudinary-fileupload" data-cloudinary-field="image_upload" type="file">
 						</div>
 					</div>
