--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
@@ -47,7 +47,7 @@
                           <a class="col s12 m12 l12 item" href="{{ photo }}" data-size="2880x1800"
                              data-med="{{ photo }}"
                              data-med-size="1440x900" style="padding-right: 0px;padding-bottom: 0px;">
-                            <img width="232" height="145" src="{{ photo }}" alt="">
+                            <img src="{{ photo }}" alt="">
                           </a>
                         </div>
                         <div class="content" style="padding: 0px;">
