--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-account-info.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-account-info.html.twig
@@ -27,7 +27,7 @@
           <div class="input-field align-left">
             <i class="mdi mdi-action-lock prefix"></i>
             {{ form_widget(account_form.plainPassword, {'attr': {'class':'validate'}}) }}
-            <label for="account_password" class="">Password</label>
+            <label for="account_password" class="">New password</label>
           </div>
         </div>
       </div>
@@ -37,7 +37,7 @@
           <div class="input-field">
             <i class="mdi mdi-action-lock prefix"></i>
             <input type="password" id="rpassword" name="rpassword" required="required" class="validate">
-            <label for="rpassword" class="">Repeat Password</label>
+            <label for="rpassword" class="">Repeat password</label>
           </div>
         </div>
       </div>
