--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-navbar-top.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-navbar-top.html.twig
@@ -48,7 +48,13 @@
       </li>
       <li class="user">
         <a class="dropdown-button" data-activates="user-dropdown" href="http://html.nkdev.info/_con/ui-buttons.html#!">
-          <img src="{{ asset('bundles/dashboard/people/01.jpg') }}" alt="Livan Frometa" class="circle"> Livan Frometa <i class="mdi-navigation-expand-more right"></i>
+          {% if app.user.profile.photoId %}
+            <img class="profile-photo-thumb" src="{{ app.user.profile.photoId | cloudinary_url({'format':'png', 'crop':'crop', 'gravity':'face', 'radius':'max', 'width':250, 'height':250}) }}">
+          {% else %}
+            <img class="profile-photo-thumb" src="{{ asset('bundles/dashboard/people/01.jpg') }}">
+          {% endif %}
+          {{ app.user.profile.fullName }}
+          <i class="mdi-navigation-expand-more right"></i>
         </a>
         <ul id="user-dropdown" class="dropdown-content">
           <li><a href="{{path('profile_index')}}"><i class="fa fa-user"></i> Profile</a>
