--- a/src/AppBundle/Resources/views/Common/Partials/_public-header.html.twig
+++ b/src/AppBundle/Resources/views/Common/Partials/_public-header.html.twig
@@ -1,10 +1,8 @@
 
 <div class="header-main">
-    <div class="header-title">
+    <div class="header-title" style="height: 50px;">
         <a href="{{path('homepage')}}">
-            <img src="{{ asset('bundles/dashboard/assets/img/logo.png') }}" alt="Realsite">
-
-            <span>Realsite</span>
+            <img src="{{ asset('bundles/common/images/logo-left.png') }}" alt="LOGO" style="height: 100%;width: auto;vertical-align: top;">
         </a>
     </div><!-- /.header-title -->
 
