--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-navbar-top.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-navbar-top.html.twig
@@ -64,7 +64,7 @@
           <li><a href="http://html.nkdev.info/_con/ui-buttons.html#!"><i class="fa fa-cogs"></i> Settings</a>
           </li>
           <li class="divider"></li>
-          <li><a href="http://html.nkdev.info/_con/page-sign-in.html"><i class="fa fa-sign-out"></i>
+          <li><a href="{{ path('fos_user_security_logout') }}"><i class="fa fa-sign-out"></i>
               Logout</a></li>
         </ul>
       </li>
