--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -3,32 +3,34 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
-<div class="container">
-  <div class="content">
-    <div class="col-sm-4 col-sm-offset-4">
-    	<h2 class="page-header center">Login Form</h2>
-  		<div class="box">
-        <form action="{{ path("fos_user_security_check") }}" method="post">
-          <div class="form-group">
-          	<input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" required="required" placeholder="Username" />
-          </div>
-          <div class="form-group">
-            <input type="password" class="form-control" id="password" name="_password" required="required" placeholder="Password" />
-          </div>
-          <div class="form-group">
-            <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-          </div>
-          <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-          <input type="hidden" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-          <button type="submit" class="btn">{{ 'security.login.submit'|trans }}</button>
-        </form>
-    	</div><!-- /.row -->
-		</div><!-- /.col-* -->
-  </div><!-- /.content -->
-</div>
+  <div class="container">
+    <div class="content">
+      <div class="col-sm-4 col-sm-offset-4">
+        <h2 class="page-header center">Login Form</h2>
 
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
+        {% if error %}
+          <div class="alert alert-danger alert-dismissible fade in" role="alert">
+            <strong>Error!</strong> {{ error.messageKey|trans(error.messageData, 'security') }}
+          </div>
+        {% endif %}
 
+        <div class="box">
+          <form action="{{ path("fos_user_security_check") }}" method="post">
+            <div class="form-group">
+              <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" required="required" placeholder="Username"/>
+            </div>
+            <div class="form-group">
+              <input type="password" class="form-control" id="password" name="_password" required="required" placeholder="Password"/>
+            </div>
+            <div class="form-group">
+              <input type="checkbox" id="remember_me" name="_remember_me" value="on"/>
+            </div>
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
+            <input type="hidden" name="_submit" value="{{ 'security.login.submit'|trans }}"/>
+            <button type="submit" class="btn">{{ 'security.login.submit'|trans }}</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock fos_user_content %}
