--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="content">
       <div class="col-sm-4 col-sm-offset-4">
-        <h2 class="page-header center">Login Form</h2>
+        <h2 class="page-header center">SIGN IN</h2>
 
         {% if error %}
           <div class="alert alert-danger alert-dismissible fade in" role="alert">
@@ -14,7 +14,7 @@
           </div>
         {% endif %}
 
-        <div class="box">
+        <div class="box" style="margin-bottom: 10px">
           <form action="{{ path("fos_user_security_check") }}" method="post">
             <div class="form-group">
               <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" required="required" placeholder="Username"/>
@@ -22,14 +22,27 @@
             <div class="form-group">
               <input type="password" class="form-control" id="password" name="_password" required="required" placeholder="Password"/>
             </div>
-            <div class="form-group">
-              <input type="checkbox" id="remember_me" name="_remember_me" value="on"/>
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <input type="checkbox" id="remember_me" name="_remember_me" value="on"/> Remember me
+                </div> </div>
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <a href=""> Forgot password</a>
+                </div> </div>
             </div>
             <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
             <input type="hidden" name="_submit" value="{{ 'security.login.submit'|trans }}"/>
             <button type="submit" class="btn">{{ 'security.login.submit'|trans }}</button>
           </form>
         </div>
+        <div class="row" style="padding-bottom: 20px">
+          <div class="col-sm-12">
+            If you not has account, please <a href="{{path('fos_user_registration_register')}}"> SIGN UP </a>.
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
