--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
@@ -21,21 +21,23 @@
             <div class="row photoswipe-gallery isotope mt-0 gallery-image-box" data-pswp-uid="1">
                 {% if property.getPhotos() %}
                   {% for photo in property.getPhotos() %}
-                    <div class="col m3">
+                    <div class="col m3 card-upload">
                       <div class="card small">
                         <div class="card-image" style="height: auto;">
                           <a class="col s12 m12 l12 item"
-                             href="{{ photo.photoUrl | cloudinary_url({'crop':'fill', 'width':400, 'height':400}) }}"
+                             href="{{ photo.photoId | cloudinary_url({'crop':'fill', 'width':2880, 'height':1800}) }}"
                              data-size="2880x1800"
-                             data-med="{{ photo.photoUrl | cloudinary_url({'crop':'fill', 'width':400, 'height':400}) }}"
+                             data-med="{{ photo.photoId | cloudinary_url({'crop':'fill', 'width':1440, 'height':900}) }}"
                              data-med-size="1440x900" style="padding-right: 0px;padding-bottom: 0px;">
-                            <img src="{{ photo.photoUrl | cloudinary_url({'crop':'fill', 'width':400, 'height':400}) }}" alt="">
+                            <img src="{{ photo.photoId | cloudinary_url({'crop':'fill', 'width':232, 'height':145}) }}" alt="">
                           </a>
                         </div>
-                        <div class="content" style="padding: 0px;">
+                        <div class="content" style="padding: 0px;"></div>
+                        <div class="progress hide" style="height: 3px;margin-top: 0px;margin-bottom: 0px;">
+                          <div class="indeterminate"></div>
                         </div>
                         <div class="card-action" style="">
-                          <a href="#!" class="blue-text" style="">ELIMINAR</a>
+                          <a href="#!" class="blue-text delete-property-photo" data-photoid="{{ photo.photoId }}">ELIMINAR</a>
                         </div>
                       </div>
                     </div>
@@ -66,7 +68,7 @@
 
 {# Hidden Content #}
 
-<div class="col m3 hide" id="card_upload">
+<div class="col m3 hide card-upload" id="card_upload">
   <div class="card small">
     <div class="card-image" style="height: auto;">
       <a class="col s12 m12 l12 item" href="{{ asset('bundles/dashboard/properties/4.jpg') }}" data-size="2880x1800"
@@ -81,7 +83,7 @@
       <div class="indeterminate"></div>
     </div>
     <div class="card-action hide" style="">
-      <a href="#!" class="blue-text" style="">ELIMINAR</a>
+      <a href="#!" class="blue-text delete-property-photo" style="">ELIMINAR</a>
     </div>
   </div>
 </div>
