--- a/src/DashboardBundle/Resources/views/Properties/design.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/design.html.twig
@@ -146,7 +146,7 @@
     var property_id = {{ property_id }};
 
     Cloudinary.init({
-      'preset': 'properties'
+      'preset': 'property_photos'
     });
 
     Cloudinary.uploadDone(function(data){
