Register UserPlan after profile is completed

--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
@@ -50,16 +50,10 @@
               class="fa fa-users"></i> Contacts
           </a>
         </li>
-
-        <li class="label">Stats</li>
-        <li class="content"><span><i class="fa fa-spinner"></i> Server Load</span>
-          <div class="progress small light-green lighten-4">
-            <div class="light-green accent-5" style="width: 37%"></div>
-          </div>
-          <span><i class="fa fa-thumbs-o-up"></i> User Satisfaction</span>
-          <div class="progress small">
-            <div style="width: 91%"></div>
-          </div>
+        <li>
+          <a href="{{ path('upgrade_index') }}" class="waves-effect waves-blue">
+            <i class="fa fa-arrow-circle-o-up"></i> Upgrade Plan
+          </a>
         </li>
       </ul>
     </div>
