Add contact (Entity, Controller and Business)

--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
@@ -46,7 +46,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="waves-effect waves-blue"><i
+          <a href="{{ path('contact_index') }}" class="waves-effect waves-blue"><i
               class="fa fa-users"></i> Contacts
           </a>
         </li>
