--- a/src/DashboardBundle/Resources/views/Upgrade/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Upgrade/index.html.twig
@@ -1,9 +1,100 @@
 {% extends 'DashboardBundle:Common:backend2.html.twig' %}
 
 {% block breadcrumb %}
-	<li><a href="#">Upgrade</a></li>
-{% endblock breadcrumb%}
+  <li><a href="#">Upgrade</a></li>
+{% endblock breadcrumb %}
 
 {% block content %}
-
+  <style>
+  .active-plan{
+    box-shadow: 0 10px 10px 0 rgba(102,187,106,0.16),0 10px 10px 0 rgba(102,187,106,0.12);
+  }
+  </style>
+  <div class="card">
+    <div class="title">
+      <h5> Plans </h5>
+    </div>
+    <div class="content">
+      <div class="row">
+        <div class="col m3">
+          <div class="active-plan">
+            <div class="card small">
+              <div class="content" style="padding-top: 10px;padding-bottom: 10px;">
+                <center class="" style="font-size: 20px"> <span style="color: #424242;">FREE</span> </center>
+              </div>
+              <div class="content" style="padding-top: 10px;padding-bottom: 10px;background-color: #F0F0EE;">
+                <center class="" style="font-size: 18px;color: #424242;"> <strong>$6.95</strong> <span style="color: #9E9E9E;">/ month </span></center>
+              </div>
+              <div class="content" style="padding-top: 15px;padding-bottom: 15px;">
+                <p> 10 contact</p>
+                <p> 10 contact</p>
+                <p> 10 contact</p>
+                <p> 10 contact</p>
+              </div>
+              <div class="content" style="padding-top: 15px;padding-bottom: 15px;">
+                <center>  <a class="btn"><i class="mdi mdi-editor-attach-money left"></i>BUY NOW</a> </center>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col m3">
+          <div class="card small">
+            <div class="content" style="padding-top: 10px;padding-bottom: 10px;">
+              <center class="" style="font-size: 20px"> <span style="color: #424242;">GOLD</span> </center>
+            </div>
+            <div class="content" style="padding-top: 10px;padding-bottom: 10px;background-color: #F0F0EE;">
+              <center class="" style="font-size: 18px;color: #424242;"> <strong>$6.95</strong> <span style="color: #9E9E9E;">/ month </span></center>
+            </div>
+            <div class="content" style="padding-top: 15px;padding-bottom: 15px;">
+              <p> 10 contact</p>
+              <p> 10 contact</p>
+              <p> 10 contact</p>
+              <p> 10 contact</p>
+            </div>
+            <div class="content" style="padding-top: 15px;padding-bottom: 15px;">
+              <center>  <a class="btn"><i class="mdi mdi-editor-attach-money left"></i>BUY NOW</a> </center>
+            </div>
+          </div>
+        </div>
+        <div class="col m3">
+          <div class="card small">
+            <div class="content" style="padding-top: 10px;padding-bottom: 10px;">
+              <center class="" style="font-size: 20px"> <span style="color: #424242;">TOP</span> </center>
+            </div>
+            <div class="content" style="padding-top: 10px;padding-bottom: 10px;background-color: #F0F0EE;">
+              <center class="" style="font-size: 18px;color: #424242;"> <strong>$6.95</strong> <span style="color: #9E9E9E;">/ month </span></center>
+            </div>
+            <div class="content" style="padding-top: 15px;padding-bottom: 15px;">
+              <p> 10 contact</p>
+              <p> 10 contact</p>
+              <p> 10 contact</p>
+              <p> 10 contact</p>
+            </div>
+            <div class="content" style="padding-top: 15px;padding-bottom: 15px;">
+              <center>  <a class="btn"><i class="mdi mdi-editor-attach-money left"></i>BUY NOW</a> </center>
+            </div>
+          </div>
+        </div>
+        <div class="col m3">
+          <div class="card small">
+            <div class="content" style="padding-top: 10px;padding-bottom: 10px;">
+              <center class="" style="font-size: 20px"> <span style="color: #424242;">PREMIUN</span> </center>
+            </div>
+            <div class="content" style="padding-top: 10px;padding-bottom: 10px;background-color: #F0F0EE;">
+              <center class="" style="font-size: 18px;color: #424242;"> <strong>$6.95</strong> <span style="color: #9E9E9E;">/ month </span></center>
+            </div>
+            <div class="content" style="padding-top: 15px;padding-bottom: 15px;">
+              <p> 10 contact</p>
+              <p> 10 contact</p>
+              <p> 10 contact</p>
+              <p> 10 contact</p>
+            </div>
+            <div class="content" style="padding-top: 15px;padding-bottom: 15px;">
+              <center>  <a class="btn"><i class="mdi mdi-editor-attach-money left"></i>BUY NOW</a> </center>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock content %}
