card image gallery

--- a/src/DashboardBundle/Resources/views/Grid/gridTemplateProperties.html.twig
+++ b/src/DashboardBundle/Resources/views/Grid/gridTemplateProperties.html.twig
@@ -162,7 +162,7 @@
                   </div>
                   <div class="card-action card-action-templeate">
                     <a href="#!" class="blue-text" style="margin-right: 3rem;font-size: 15px">
-                      <i class="mdi-editor-attach-money" style="font-size: 20px;margin-top: 2px;position: absolute;left: 6px;top: 378px;"></i>12.000</a>
+                      <i class="mdi-editor-attach-money" style="font-size: 15px;"></i>12.000</a>
                     <a href="#!" class="blue-text right">VIEW DETAIL</a>
                   </div>
                   <div class="card-reveal">
