--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-navbar-top.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-navbar-top.html.twig
@@ -48,12 +48,12 @@
       </li>
       <li class="user">
         <a class="dropdown-button" data-activates="user-dropdown" href="http://html.nkdev.info/_con/ui-buttons.html#!">
-          {% if app.user.profile.photoId %}
+          {% if app.user.profile.photoId is defined and app.user.profile.photoId %}
             <img class="profile-photo-thumb" src="{{ app.user.profile.photoId | cloudinary_url({'format':'png', 'crop':'crop', 'gravity':'face', 'radius':'max', 'width':250, 'height':250}) }}">
           {% else %}
-            <img class="profile-photo-thumb" src="{{ asset('bundles/dashboard/people/01.jpg') }}">
+            <img class="profile-photo-thumb circle" src="{{ asset('bundles/dashboard/people/01.jpg') }}">
           {% endif %}
-          {{ app.user.profile.fullName }}
+          {{ app.user.profile.fullName is defined ? app.user.profile.fullName : app.user.username }}
           <i class="mdi-navigation-expand-more right"></i>
         </a>
         <ul id="user-dropdown" class="dropdown-content">
