Create contact functionality

--- a/src/DashboardBundle/Resources/views/Contact/new.html.twig
+++ b/src/DashboardBundle/Resources/views/Contact/new.html.twig
@@ -10,12 +10,9 @@
 		<div class="title">
 			<h5> Contacts </h5>
 			<div class="btn-group right">
-				<a class="btn btn-small waves-dark waves-effect"><i class="mdi mdi-content-add left"></i>Add</a>
-				<a id="edit_action" class="btn btn-small waves-dark waves-effect">
-					<i class="mdi mdi-content-create left"></i>
-					Edit
-				</a>
-				<a class="btn btn-small waves-dark waves-effect red"><i class="mdi mdi-content-clear left"></i>Delete</a>
+				<a class="btn btn-small waves-dark waves-effect"><i class="mdi mdi-hardware-keyboard-arrow-left left"></i>Back</a>
+				<a id="edit_action" class="btn btn-small waves-dark waves-effect"> <i class="mdi mdi-content-save left"></i> Save</a>
+				<a id="edit_action" class="btn btn-small waves-dark waves-effect"> <i class="mdi mdi-action-done left"></i> Save and Close</a>
 			</div>
 		</div>
 		<div class="content">
